--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'ConnectAffoz'
+include ':react-native-wifi-and-hotspot-wizard'
+project(':react-native-wifi-and-hotspot-wizard').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wifi-and-hotspot-wizard/android')
+include ':react-native-wifi-reborn'
+project(':react-native-wifi-reborn').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wifi-reborn/android')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 include ':react-native-android-wifi'
