--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-wifi-and-hotspot-wizard": "^1.0.6-beta.1",
-    "react-native-wifi-reborn": "^4.3.3",
+    "react-native-wifi-and-hotspot-wizard": "^1.0.5-stable",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
